# LiteSh

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  build_package.sh  exeptions.hpp  fctrl.cpp
Server/: CMakeLists.txt  Server.cpp
fctrl/: CMakeLists.txt  argexec.cpp  argexec.hpp  main.cpp
fctrl/argpars/: argpars.hpp  arprs.cpp
fctrl/file/: CMakeLists.txt
fctrl/libs/procfs/: CMakeLists.txt  procfs.cpp  procfs.hpp
fctrl/res/: man.txt
include/: lab2.hpp
libs/: pVector.hpp
libs/argpars/: CMakeLists.txt  argpars.hpp  argsParser.hpp  arprs.cpp
libs/cmdline/: CMakeLists.txt  cmdline.cpp  cmdline.hpp
libs/file/: CMakeLists.txt  file.cpp  file.hpp
libs/http/: CMakeLists.txt  client.cpp  client.hpp
libs/procfs/: CMakeLists.txt  procfs.cpp  procfs.hpp
liteSH/: CMakeLists.txt  argexec.cpp  argexec.hpp  cmdline.hpp  dlload.h  main.cpp  proc.hpp
liteSH/cmd/: CMakeLists.txt
liteSH/dynlib/: CMakeLists.txt  dynlib.c
liteSH/libs/: exeptions.hpp
liteSH/libs/argpars/: CMakeLists.txt
liteSH/libs/file/: CMakeLists.txt  file.cpp  file.hpp
liteSH/libs/procfs/: CMakeLists.txt
liteSH/proc/: CMakeLists.txt  proc.hpp  procs.cpp
liteSH/server/: CMakeLists.txt  server.cpp  server.hpp
liteSH/shell/: CMakeLists.txt  proc.hpp  shell.cpp  shell.hpp
liteSH/sig/: CMakeLists.txt  sig.cpp  sighandl.hpp
liteSH/src/: argexec.cpp  argexec.hpp  cmdline.hpp  main.cpp  proc.hpp  sighandl.hpp
package/DEBIAN/: control  postinst  prerm
package/etc/systemd/system/: autorun.service
package/opt/litesh/: man.txt
src/: CMakeLists.txt  fctrl.cpp  fctrl.hpp  main.cpp  proc.hpp  sighandl.hpp
test/: CMakeLists.txt  argparser.cpp  cmdline.cpp  file.cpp  http_client.cpp  lol.txt  pVector.cpp
tests/: CMakeLists.txt  fctrl_tst.cpp
tests/res/: testfile.txt
